# font-search

./: Cargo.toml  README.md  install.sh
benches/: my_bench.rs
font-search-py/: __init__.py  __main__.py
src/: lib.rs  main.rs
