[package]
name = "font-search"
version = "0.1.0"
authors = ["Cyber Gsus <cyber.gsuscode@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yeslogic-fontconfig = "0.1.1"
levenshtein = "1.0.4"
itertools = "0.10.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.3"


[[bench]]
name = "my_bench"
harness = false